--- a/pug/home/section_table_persebaran_penerima.pug
+++ b/pug/home/section_table_persebaran_penerima.pug
@@ -1,4 +1,4 @@
-section.section-course.py-3.py-lg-5
+section.section-course.py-4.pt-lg-5
     .container.px-4.px-md-0
         .row.text-center
             h4 Persebaran Penerima
