--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -11,28 +11,28 @@ section.section-course.py-3.py-lg-5
             
             .col-lg-12.mb-4
                 h6 Pemanfaatan Insentif
-                .row.d-flex.justify-content-center
-                    .col-lg-2.col-md-6.bg-b800
-                        img(src="img/img-bowl-food.svg", alt="")
-                        h5 88%
-                        p Kebutuhan Pokok
+                .row.px-3
+                    .col-6.col-lg-20.col-md-6.bg-b800.p-4.rounded-lg-start
+                        img.mb-3(src="img/img-bowl-food.svg", alt="")
+                        h5.text-white 88%
+                        p.text-white.mb-0.fs-7 Kebutuhan Pokok
 
-                    .col-lg-2.col-md-6.bg-t500
-                        img(src="img/img-bowl-food.svg", alt="")
-                        h5 88%
-                        p Kebutuhan Pokok
+                    .col-6.col-lg-20.col-md-6.bg-t500.p-4
+                        img.mb-3(src="img/img-money-hand.svg", alt="")
+                        h5.text-white 67%
+                        p.text-white.mb-0.fs-7 Sebagai Modal Usaha
 
-                    .col-lg-2.col-md-6.bg-y500
-                        img(src="img/img-bowl-food.svg", alt="")
-                        h5 88%
-                        p Kebutuhan Pokok
+                    .col-6.col-lg-20.col-md-6.bg-y500.p-4
+                        img.mb-3(src="img/img-wifi.svg", alt="")
+                        h5.text-white 57%
+                        p.text-white.mb-0.fs-7 Membeli Paket Data / Internet
 
-                    .col-lg-2.col-md-6.bg-o500
-                        img(src="img/img-bowl-food.svg", alt="")
-                        h5 88%
-                        p Kebutuhan Pokok
+                    .col-6.col-lg-20.col-md-6.bg-o500.p-4
+                        img.mb-3(src="img/img-online-learning.svg", alt="")
+                        h5.text-white 48%
+                        p.text-white.mb-0.fs-7 Kegiatan Penunjang Belajar Lain
 
-                    .col-lg-2.col-md-6.bg-b500
-                        img(src="img/img-bowl-food.svg", alt="")
-                        h5 88%
-                        p Kebutuhan Pokok
+                    .col-12.col-lg-20.col-md-12.bg-b500.p-4.rounded-lg-end
+                        img.mb-3(src="img/img-external-learning.svg", alt="")
+                        h5.text-white 31%
+                        p.text-white.mb-0.fs-7 Pembelian Pelatihan di Luar Prakerja
