--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -17,8 +17,8 @@ section.section-course.py-3.py-lg-5
 
             .col-lg-6
                 //- Chart jenis kelamin
-                div#jenisKelaimin
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                div#jenisKelamin(style="height:300px")
+                    //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
                 //- Chart Umur
