--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -2136,6 +2136,18 @@ $pipeline-radius: 4rem;
     .rounded-top-right{
       border-top-right-radius: $pipeline-radius;
     }
+    
+    .col-lg-20{
+      width: 20%;
+    }
+    .rounded-lg-start{
+      border-top-left-radius: .5rem;
+      border-bottom-left-radius: .5rem;
+    }
+    .rounded-lg-end{
+      border-top-right-radius: .5rem;
+      border-bottom-right-radius: .5rem;
+    }
 
 }
 
