--- a/pug/includes/html_head.pug
+++ b/pug/includes/html_head.pug
@@ -27,7 +27,8 @@ head
     //-- start load fonts -->
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@700;900&display=swap" rel="stylesheet")
+    //- link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@700;900&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@600;700;900&display=swap" rel="stylesheet")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css")
     link(rel="stylesheet", href="https://cdn.datatables.net/2.1.4/css/dataTables.dataTables.css")
     //- link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic")
