--- a/index.pug
+++ b/index.pug
@@ -17,8 +17,13 @@ html(lang="id" translate="no" page-class="home")
             include pug/home/section_maps.pug
             include pug/home/section_table_persebaran_penerima.pug
             include pug/home/section_profil_penerima.pug
-
-            include pug/home/section_insentif.pug
+            include pug/home/section_inklusivitas.pug
+            include pug/home/section_lembagapelatihan.pug
+            //- include pug/home/section_manfaat_prakerja.pug tesssss
+            //- include pug/home/section_pipeline_data.pug
+            //- include pug/home/section_moda_pelatihan.pug
+            //- include pug/home/section_rekening_insentif.pug
+            //- include pug/home/section_pipeline_insentif.pug
 
 
 
