--- a/index.pug
+++ b/index.pug
@@ -19,6 +19,7 @@ html(lang="id" translate="no" page-class="home")
             include pug/home/section_profil_penerima.pug
 
             include pug/home/section_insentif.pug
+            include pug/home/section_testimony.pug
 
 
 
