--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -4,9 +4,9 @@ section.section-course.py-3.py-lg-5
             h4.mb-4 Insentif
 
             .col-lg-12.mb-4
+                h6 Rekening Penerimaan Insentif
                 //- Chart
                 div#rekeningPenerimaanInsentif
-                    h6 Rekening Penerimaan Insentif
                     span.skeleton-box.w-100.rounded(style="height:300px")
             
             .col-lg-12.mb-4
@@ -36,3 +36,34 @@ section.section-course.py-3.py-lg-5
                         img.mb-3(src="img/img-external-learning.svg", alt="")
                         h5.text-white 31%
                         p.text-white.mb-0.fs-7 Pembelian Pelatihan di Luar Prakerja
+
+            //- Chart
+            .col-lg-12.mb-4
+                h6 Manfaat yang dirasakan setelah mengikuti Program Prakerja
+                div#rekeningPenerimaanInsentif
+                    span.skeleton-box.w-100.rounded(style="height:300px")
+
+            .col-lg-12.mb-4
+                h6 Pemanfaatan Insentif
+                .row.gap-0.d-flex.align-items-end
+                    .col-lg-3.m-0.p-0
+                        .p-4.bg-b600.text-start
+                            h5.h1.text-white.pt-md-5 96%
+                            p.m-0.text-white Meningkatkan kompetensi
+
+                    .col-lg-3.m-0.p-0
+                        .p-4.bg-b500.text-start
+                            h5.h1.text-white.pt-md-4 95%
+                            p.m-0.text-white Meningkatkan produktivitas kerja
+
+                    .col-lg-3.m-0.p-0
+                        .p-4.bg-b400.text-start
+                            h5.h1.text-white.pt-md-3 94%
+                            p.m-0.text-white Meningkatkan daya saing kerja
+
+                    .col-lg-3.m-0.p-0
+                        .p-4.bg-b300.text-start
+                            h5.h1.text-white.pt-md-2 92%
+                            p.m-0.text-white Mendorong kewirausahaan
+
+        
