add testimony section with owl carousel

--- a/css/scss/owl.carousel.scss
+++ b/css/scss/owl.carousel.scss
@@ -446,7 +446,7 @@
       display: flex!important;
       .owl-item{
         // outline: solid 1px red;
-        background-color: white;
+        background-color: var(--b100);
         border-radius: 1rem;
         margin: .5rem .75rem;
       }
