--- a/pug/home/section_testimony.pug
+++ b/pug/home/section_testimony.pug
@@ -1,4 +1,49 @@
-section.section-course.py-3.py-lg-5
-    .container.px-4.px-md-0
-        h3 Studi Case 
-        
+section.section-testimony
+  .container.py-3.py-lg-5.px-4.px-md-0
+    h4.custom-rfs-h4.text-center
+        | Apa Kata Mereka?
+
+    .owl-carousel.testimony-carousel.carousel-auto-height
+        .testimony-card.p-3.d-flex.align-items-start
+            .testimony-header.d-flex.justify-content-between.align-items-center.pe-3
+                span.fs-1
+                    i.bi.bi-quote
+
+            .testimony-body 
+                p.m-0.pt-3
+                    i Prakerja mendorong peningkatan inklusi keuangan, terutama bagi penerima Prakerja dengan pendidikan SMA ke bawah, penerima yang tinggal di luar Pulau Jawa, atau penerima dengan omzet usaha dan gaji kategori rendah.
+                    br
+                    i Hasil studi ini menunjukkan bahwa 43,8% responden membuka akun e-wallet dan 9,5% responden membuka rekening bank pertama kali karena menjadi penerima Prakerja.”
+                span.testimony-divider
+                p 
+                    b DEFINIT-ADB, 2023
+
+        .testimony-card.p-3.d-flex.align-items-start
+            .testimony-header.d-flex.justify-content-between.align-items-center.pe-3
+
+                span.fs-1
+                    i.bi.bi-quote
+
+            .testimony-body 
+                p.m-0.pt-3
+                    i Berdasarkan studi DEFINIT, program Prakerja meningkatkan daya saing penerima dalam meningkatkan peluang mendapatkan pekerjaan (94,7%), 
+                        | meningkatkan keterampilan, kompetensi, dan produktivitas (82,8%), dan meningkatkan motivasi belajar teknologi digital (99,0%). 
+                        | Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.”
+                span.testimony-divider
+                p 
+                    b DEFINIT-ADB, 2023
+
+        .testimony-card.p-3.d-flex.align-items-start
+            .testimony-header.d-flex.justify-content-between.align-items-center.pe-3
+
+                span.fs-1
+                    i.bi.bi-quote
+
+            .testimony-body 
+                p.m-0.pt-3
+                    i “Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, 
+                        | Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.”
+                span.testimony-divider
+                p 
+                    b Poltracking Indonesia 2023
+
