--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -448,9 +448,7 @@ body {
       object-fit: cover;
     }
   }
-  i {
-    color: var(--r500);
-  }
+  
 }
 
 .testimony-carousel {
@@ -467,6 +465,14 @@ body {
       padding: 0;
     }
   }
+}
+
+.testimony-divider{
+  display: block;
+  width: 50px;
+  height: 2px;
+  background-color: var(--b500);
+  margin: .5rem 0;
 }
 
 .howto-carousel {
