--- a/pug/includes/html_foot.pug
+++ b/pug/includes/html_foot.pug
@@ -3,7 +3,7 @@ script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundl
 script(src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 script(src="https://cdn.datatables.net/2.1.4/js/dataTables.js")
-//- script(src=baseURL+"js/lib/owl.carousel.min.js")
+script(src=baseURL+"js/lib/owl.carousel.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer")
 //- script(src=baseURL+"js/lib/echarts.min.js")
 
