update page provinsi

--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -1,19 +1,21 @@
-.row.bg-s100.rounded-3(style="min-height:320px") 
-    .col-lg-8 
-        p Map Canvas 
+section.pt-3.pb-4 
+    .container 
+        .row.bg-s100.rounded-3(style="min-height:320px") 
+            .col-lg-8 
+                p Map Canvas 
 
-    .col-lg-4.bg-s200.p-3
-        div
-            .h6 Provinsi
-            h1 Jambi 
-            .h6 Pulau Sumatera
+            .col-lg-4.bg-s200.p-3
+                div
+                    .h6 Provinsi
+                    h1 Jambi 
+                    .h6 Pulau Sumatera
 
-        hr
+                hr
 
-        p 
-            i / fun fact /
+                p 
+                    i / fun fact /
 
-        div.h3 
-            | 17
+                div.h3 
+                    | 17
 
-        p.fs-7 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
+                p.fs-7 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
