--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -15,7 +15,8 @@ section.pt-3.pb-4
                 p 
                     i / fun fact /
 
-                div.h3 
-                    | 17
+                .outer-funfact.bg-o500.text-white 
+                    .inner-funfact.d-flex.align-items-center.justify-content-center
+                        span.h3.m-0 17
 
                 p.fs-7 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
