--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -1,5 +1,6 @@
 section.section-hero
     h1.main-heading.h3 
-        | Statistik Program 
-        span Prakerja
+        | Statistik Penerima 
+        span Prakerja 
+        | 2020 - 2023
     #maps-indonesia.container-fluid
