--- a/pug/provinsi/section_main_content.pug
+++ b/pug/provinsi/section_main_content.pug
@@ -3,20 +3,10 @@ section.pt-3.pb-4
         .row
             //- sidebar 
             .col-lg-3.ps-0.pe-4
-                .list-group
+                .list-group#listCity
                     a.list-group-item.list-group-item-action.active(href='#' aria-current='true')
                         | Semua Kabupaten / Kota
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Batanghari
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Bungo
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Kerinci
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Merangin
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Muaro Jambi
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Sarolangun
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Tanjung Jabung Barat
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Tanjung Jabung Timur
-                    a.list-group-item.list-group-item-action(href='#') Kabupaten Tebo
-                    a.list-group-item.list-group-item-action(href='#') Kota Jambi
-                    a.list-group-item.list-group-item-action(href='#') Kota Sungai Penuh
+                    a.list-group-item.list-group-item-action.disabled(href='#' aria-disabled) Memuat Kota / Kabupaten...
 
             //- content 
             .col-lg-9
